<?xml version="1.0"?>
<package format="2">
  <name>handling_robot_bringup</name>
  <version>0.0.0</version>
  <description>The handling_robot_bringup package</description>
  <maintainer email="x3031133@edu.gifu-u.ac.jp">Yasui Kazuya</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
